<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="20"
        app:srcCompat="@drawable/logo3" />

    <EditText
        android:id="@+id/aea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"

        android:background="@color/azul"
        android:drawableLeft="@drawable/usuario"
        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        android:layout_marginBottom="20dp"
        android:layout_weight="9"
        android:background="@color/azul"
        android:drawableLeft="@drawable/bloqueo"

        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/ingresar_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"

        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@color/morado"

        android:text="@string/Ingresar"

        />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Registrar"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center|top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            app:srcCompat="@drawable/social" />

        <ImageButton
            android:id="@+id/imageButton2Gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            app:srcCompat="@drawable/gmail" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2RecordarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Olidaste_contraseña" />
</LinearLayout>